# Projet-2

./: .gitignore  README.md  Scraping  Scraping.py  Tuto.py  Untitled Diagram.drawio  UrlCategory.py  WriteCSV.py  Write_csv.py  download.py  main.py  pyproject.toml  requestest.py  requete.py  requirements.txt  scrap_category.py  scraping.py  urls.txt  write_csv.py
CSV/: Crime.csv
scraping/: download.py  scraping.py  write_csv.py
src/: main.py
src/scraping/: download.py  scrap_category.py  scraping.py  write_csv.py
tests/: test_scraping.py
