[tool.poetry]
name = "devpyprojet2"
version = "0.1.0"
description = "Web scraping with Python"
authors = ["rlossec <raphaelossec@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
tqdm = "4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
